update to render correctly on mobile

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,9 +1,16 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 900px 1fr;
   padding: 40px 16px;
+  grid-template-columns: 1fr;
 }
 
-.container > * {
-  grid-column: 2;
+@media only screen and (min-width: 900px) {
+  .container {
+    grid-template-columns: 1fr 900px 1fr;
+    padding: 0;
+  }
+
+  .container > * {
+    grid-column: 2;
+  }
 }
